--- a/CourseLibrary.API/Properties/launchSettings.json
+++ b/CourseLibrary.API/Properties/launchSettings.json
@@ -13,7 +13,8 @@
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:51044"
     },
     "CourseLibrary.API": {
       "commandName": "Project",
